--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-acale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect"href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=inter:wght@700&display=swap"
 </head>
 <body>
     <section class="container principal">
         <div>
-    <h1> Com o Combo+, você pode aproveitar a Alura + e o Alura Língua por um preço único. </h1>
+    <h1>="container_titulo"> Com o Combo+, você pode aproveitar a Alura + e o Alura Língua por um preço único. </h1>
 <img src="Combo.png" alt="O Combo + é a junçaõ do Alura + e o Alura língua">
 <a href="www.alura.com.br&quot; class="container__botao">Assine por 12x de R$120,00*</a>
 <a href="www.alura.com.br&quot; class="container__botao botao__secundario">Assinar somente o Alura+</a>
