--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-acale=1">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect"href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=inter:wght@700&display=swap"
+    <link rel=”preconnect” href=”https://fonts.googleapis.com”>
+<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap&quot; rel="stylesheet">
 </head>
 <body>
     <section class="container principal">
-        <div>
-    <h1>="container_titulo"> Com o Combo+, você pode aproveitar a Alura + e o Alura Língua por um preço único. </h1>
-<img src="Combo.png" alt="O Combo + é a junçaõ do Alura + e o Alura língua">
-<a href="www.alura.com.br&quot; class="container__botao">Assine por 12x de R$120,00*</a>
-<a href="www.alura.com.br&quot; class="container__botao botao__secundario">Assinar somente o Alura+</a>
+        <div class="container__caixa">
+    <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a Alura + e o Alura Língua por um preço único. </h1>
+<img src="Combo.png" alt="O Combo + é a junçâo do Alura + e o Alura língua" class ="container__imagem">
+<a href="www.alura.com.br; class="container__botao">Assine por 12x de R$120,00*</a>
+<a href="www.alura.com.br; class="container__botao botao__secundario">Assinar somente o Alura+</a>
 <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
 </div>
 </section>
